--- a/src/styles/message.css
+++ b/src/styles/message.css
@@ -61,7 +61,7 @@
 
 .sc-message--file {
   background: white;
-  border: solid 1px #CCCDD1;
+  border: solid 1px #cccdd1;
   padding: 15px 20px;
   border-radius: 5px;
   display: flex;
