--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,7 +5,7 @@
   border-top-right-radius: 9px;
   color: white;
   padding: 10px;
-  box-shadow: 0 1px 4px rgba(0,0,0,.2);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   position: relative;
   box-sizing: border-box;
   display: flex;
